@@ -1,3 +1,10 @@
+2015-08-24  Charlie Zender  <zender@uci.edu>
+
+	* NCO-diagnosed ne30 global area exactly equals original (native grid) ne30 global area
+	Both these areas equal 4*pi to fractional tolerance of 1.0e-11
+
+	* Optimize area calculation to recycle information from previous triangles
+
 2015-08-23  Charlie Zender  <zender@uci.edu>
 
 	* Diagnose area on bilinearly-interpolated 1D grids with L'Huillier's formula
